Update vcpkg submodule to track master branch and fix RERUN_DOWNLOAD_AND_BUILD_ARROW order
- Configure vcpkg submodule to track master branch in .gitmodules
- Set RERUN_DOWNLOAD_AND_BUILD_ARROW before FetchContent_Declare
- Ensures the setting is available when Rerun's CMake is processed

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -26,6 +26,10 @@ find_package(Threads REQUIRED)
 # ------------------------------------------------------------------
 # Rerun SDK via FetchContent (use vcpkg's Arrow)
 # ------------------------------------------------------------------
+# Configure rerun_sdk to use vcpkg's Arrow instead of downloading it
+# Must be set before FetchContent_Declare
+set(RERUN_DOWNLOAD_AND_BUILD_ARROW OFF CACHE BOOL "" FORCE)
+
 include(FetchContent)
 
 FetchContent_Declare(
@@ -33,9 +37,6 @@ FetchContent_Declare(
     URL https://github.com/rerun-io/rerun/releases/latest/download/rerun_cpp_sdk.zip
     DOWNLOAD_EXTRACT_TIMESTAMP TRUE
 )
-
-# Configure rerun_sdk to use vcpkg's Arrow instead of downloading it
-set(RERUN_DOWNLOAD_AND_BUILD_ARROW OFF CACHE BOOL "" FORCE)
 
 FetchContent_MakeAvailable(rerun_sdk)
 
